<?xml version="1.0"?>
<package>
  <name>ros_pioneer</name>
  <version>0.0.0</version>
  <description>The ros_pioneer package</description>
  <maintainer email="arissynod@gmail.com">Aris Synodinos</maintainer>
  <author email="arissynod@gmail.com">Aris Synodinos</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ros_pioneer</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
